--- a/Resources/Private/Language/de.locallang_mod_module.xlf
+++ b/Resources/Private/Language/de.locallang_mod_module.xlf
@@ -5,13 +5,16 @@
         <body>
            <trans-unit id="mlang_labels_tablabel">
                 <source>FBIT Modules</source>
+                <target>FBIT Module</target>
             </trans-unit>
             <trans-unit id="mlang_tabs_tab">
-                <source>FBIT</source>
+                <source>Records</source>
+                <target>Datensätze</target>
             </trans-unit>
 
             <trans-unit id="backend.module.select.prefix">
                 <source>List</source>
+                <target>Liste</target>
             </trans-unit>
         </body>
     </file>
