--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2017-07-15 Release 1.0.3
+ * extend JS module to also append extension key to relevant links (this means more features working like expected)
+
 2017-07-14 Release 1.0.2
  * add backend requireJS module to append extension key to all forms in web_list module
 
