--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2017-07-16 Release 1.0.4
+ * avoid killing of the web_list module - fail silently if no extension configuration is found
+
 2017-07-15 Release 1.0.3
  * extend JS module to also append extension key to relevant links (this means more features working like expected)
 
