--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2017-07-25 Release 2.0.0
+ * add a host of different layout options
+ * add support for listing of individual record types
+
 2017-07-16 Release 1.0.4
  * avoid killing of the web_list module - fail silently if no extension configuration is found
 
