--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2017-08-07 Release 2.1.0
+ * add processing options for displayFields
+
 2017-07-25 Release 2.0.1
  * fix typos in variable name and options paths
 
